Add HangFire to host as a window serivce

--- a/ConsoleApp/Config.json
+++ b/ConsoleApp/Config.json
@@ -2,9 +2,8 @@
   "Logging": {
     "IncludeScopes": true,
     "LogLevel": {
-      "default": "Information",
-      "ConsoleApp.LinkChecker": "Trace",
-      "ConsoleApp": "Debug"
+      "default": "Information"
+      
     }
   }
 }
